--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
-    "firebase": "^11.0.1",
+    "firebase": "^11.0.2",
+    "firestore": "^1.1.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
